custom course added, without booklist

--- a/app/src/main/res/layout/content_custom_course.xml
+++ b/app/src/main/res/layout/content_custom_course.xml
@@ -2,13 +2,13 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_custom_book"
+    android:id="@+id/content_custom_course"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.app.studymanager.custombook.CustomBookActivity"
+    tools:context="com.app.studymanager.customcourse.CustomCourseActivity"
     tools:ignore="MissingPrefix"
-    tools:showIn="@layout/activity_custom_book">
+    tools:showIn="@layout/activity_custom_course">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,37 +26,22 @@
                 android:id="@+id/title_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/book_title"
+                android:hint="@string/course_title"
                 android:inputType="text" />
 
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/pages"
+            android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp">
 
             <EditText
-                android:id="@+id/pages_et"
+                android:id="@+id/description_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/no_pages"
-                android:inputType="number" />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/author"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp">
-
-            <EditText
-                android:id="@+id/author_et"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/author"
+                android:hint="@string/descript"
                 android:inputType="text" />
 
         </android.support.design.widget.TextInputLayout>
@@ -69,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="15dp"
-            android:onClick="createBook"
+            android:onClick="createCourse"
             android:text="@string/save"
             android:textAllCaps="true"
             android:textColor="@color/colorPrimaryDark"
