--- a/app/src/main/res/layout/activity_pwd_recovery.xml
+++ b/app/src/main/res/layout/activity_pwd_recovery.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -21,6 +22,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_pwd_recovery" />
+    <include layout="@layout/content_pwd_recovery"/>
 
 </android.support.design.widget.CoordinatorLayout>
