--- a/app/src/main/res/layout/subscribed_courses_item.xml
+++ b/app/src/main/res/layout/subscribed_courses_item.xml
@@ -5,7 +5,8 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
     card_view:cardCornerRadius="2dp"
     card_view:cardElevation="5dp"
     card_view:cardUseCompatPadding="true"
